--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@prisma/client": "^5.16.1",
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
+    "daisyui": "^4.12.10",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
