--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 POSTGRES_PRISMA_URL=="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+NEXTAUTH_SECRET=your-nextauth-secret
