--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.16.1",
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "daisyui": "^4.12.10",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
