--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "prj-habit-tracker",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.16.1",
-    "@types/aos": "^3.0.7",
-    "aos": "^2.3.4",
-    "daisyui": "^4.12.10",
-    "next": "14.2.4",
-    "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "prisma": "^5.16.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "prj-habit-tracker",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write .",
+        "format:check": "prettier --check ."
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.5.2",
+        "@fortawesome/free-brands-svg-icons": "^6.5.2",
+        "@fortawesome/free-regular-svg-icons": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^5.16.1",
+        "@types/aos": "^3.0.7",
+        "aos": "^2.3.4",
+        "daisyui": "^4.12.10",
+        "next": "14.2.4",
+        "next-auth": "^4.24.7",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-icons": "^5.2.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.4",
+        "postcss": "^8",
+        "prettier": "^3.6.2",
+        "prisma": "^5.16.1",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
