--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
         "@types/aos": "^3.0.7",
         "aos": "^2.3.4",
         "daisyui": "^4.12.10",
+        "googleapis": "^159.0.0",
         "next": "14.2.4",
         "next-auth": "^4.24.7",
+        "papaparse": "^5.5.3",
         "react": "^18",
         "react-dom": "^18",
-        "react-icons": "^5.2.1"
+        "react-icons": "^5.2.1",
+        "swr": "^2.3.6"
     },
     "devDependencies": {
         "@types/node": "^20",
+        "@types/papaparse": "^5.3.16",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
