--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "googleapis": "^159.0.0",
         "next": "14.2.4",
         "next-auth": "^4.24.7",
+        "next-pwa": "^5.6.0",
         "papaparse": "^5.5.3",
         "react": "^18",
         "react-dom": "^18",
