--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "swr": "^2.3.6"
     },
     "devDependencies": {
+        "@types/minimatch": "^6.0.0",
         "@types/node": "^20",
         "@types/papaparse": "^5.3.16",
         "@types/react": "^18",
