feat(Manifest, Logo): add display_override to manifest and enhance logo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,7 @@
   "categories": ["productivity", "health", "lifestyle"],
   "lang": "en",
   "scope": "/",
+  "display_override": ["window-controls-overlay"],
   "icons": [
     {
       "src": "/img/logo.svg",
