--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f8fafc",
-  "theme_color": "#1496F6",
+  "theme_color": "#f8fafc",
   "orientation": "portrait-primary",
   "categories": ["productivity", "health", "lifestyle"],
   "lang": "en",
