--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "better-habit",
-    "version": "1.-.0",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -8,7 +8,14 @@
         "start": "next start",
         "lint": "next lint",
         "format": "prettier --write .",
-        "format:check": "prettier --check ."
+        "format:check": "prettier --check .",
+        "version:patch": "npm version patch",
+        "version:minor": "npm version minor",
+        "version:major": "npm version major",
+        "version:prerelease": "npm version prerelease",
+        "release": "npm run build && npm run version:patch && git push && git push --tags",
+        "release:minor": "npm run build && npm run version:minor && git push && git push --tags",
+        "release:major": "npm run build && npm run version:major && git push && git push --tags"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
